2013-10-16  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c: s/save/save_pts/.

2013-10-16  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Display improvements.

	* src/ttdebug.c (exec): Removed, unused.
	(RunIns): Increase size of `temp' buffer.
	Display negative hex numbers.
	Correctly display hex numbers with more than 4 digits.
	(RunIns) <'g'>: Display interpreter version.

2013-10-09  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_Waterfall): Avoid `%n' in `snprintf'.

	MSVC disables this by default, and compilation would fail otherwise.

2013-09-28  Dave Arnold <darnold@adobe.com>

	* src/ftdiff.c (ProcessEvent) <'H'>: Fix typo.

	If FT_DEBUG_AUTOFIT is false, then the command `H' had a side-effect
	of decrementing the glyph index.

2013-09-23  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Improve text display at small sizes.

	* src/ftdiff.c (render_state_draw): Loop over the text.  This also
	avoids problems if the .notdef character has zero width (for
	whatever reasons).

2013-07-21  Behdad Esfahbod  <behdad@google.com>

	* src/ftcommon.c (FTDemo_Index_To_Bitmap): Add BGRA support.

2013-07-21  Werner Lemberg  <wl@gnu.org>

	* graph/rules.mk (GRAPH_H): Add missing files.

2013-07-21  Behdad Esfahbod  <behdad@google.com>

	* src/ftcommon.c (FTDemo_Index_To_Bitmap): Remove unneeded code.

2013-07-21  Behdad Esfahbod  <behdad@google.com>

	[graph] Fix BGRA blending.

	* graph/gblbgra.h: Simplify and correct blending operation.

2013-07-20  Werner Lemberg  <wl@gnu.org>

	Fix Savannah bug #39537.

	*/* s/FALSE/0/, s/TRUE/1/.

2013-07-20  Werner Lemberg  <wl@gnu.org>

	Improve font loading.

	In particular, avoid a crash in ftgrid for fonts without outlines.

	* src/ftcommon.c (FTDemo_Install_Font): Provide argument to load
	fonts with outlines only.
	* src/ftcommon.h, src/ftview.c, src/ftstring.c: Updated.
	* src/ftgrid.c (main): Updated.
	Emit warning message for skipped fonts.

2013-07-05  Werner Lemberg  <wl@gnu.org>
